--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda PC Accesorios</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="./styles/estilos.css" />
 </head>
 
 <body>
@@ -28,22 +28,22 @@
     </section>
     <main class="grid-productos">
         <div class="producto">
-            <img src="img/teclado1.jpg" alt="Teclado Mecánico">
+            <img src="./img/monitor1.jpg" alt="Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse3.jpg" alt="Mouse Gamer">
+            <img src="./img/mouse3.jpg" alt="Mouse Gamer">
             <h3>Mouse Gamer</h3>
             <p>$35 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris3.jpg" alt="Auriculares">
+            <img src="./img/auris3.jpg" alt="Auriculares">
             <h3>Auriculares</h3>
             <p>$40 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor2.jpg" alt="Monitor 144Hz">
+            <img src="./img/monitor2.jpg" alt="Monitor 144Hz">
             <h3>Monitor 144Hz</h3>
             <p>$200 USD</p>
         </div>
