--- a/pages/auriculars.html
+++ b/pages/auriculars.html
@@ -23,12 +23,12 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="img/auris1.jpg" alt=" Teclado Mecánico">
+            <img src="./img/auris1.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris2.jpg" alt=" Teclado Mecánico">
+            <img src="./img/auris2.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
@@ -38,17 +38,17 @@
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris4.jpg" alt=" Teclado Mecánico">
+            <img src="./img/auris4.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris5.jpg" alt=" Teclado Mecánico">
+            <img src="./img/auris5.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris6.jpg" alt=" Teclado Mecánico">
+            <img src="./img/auris6.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
