--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -23,32 +23,32 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="img/monitor1.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor1.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor2.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor2.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor3.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor3.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor4.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor4.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor5.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor5.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/monitor6.jpg" alt=" Teclado Mecánico">
+            <img src="./img/monitor6.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
@@ -59,4 +59,4 @@
     </footer>
 </body>
 
-</html>
+</html>./
