--- a/pages/mouse.html
+++ b/pages/mouse.html
@@ -23,32 +23,32 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="img/mouse1.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse1.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse2.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse2.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse3.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse3.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse4.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse4.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse5.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse5.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/mouse6.jpg" alt=" Teclado Mecánico">
+            <img src="./img/mouse6.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
