--- a/pages/teclados.html
+++ b/pages/teclados.html
@@ -23,32 +23,32 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="img/teclado1.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado1.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/teclado2.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado2.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/teclado3.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado3.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/teclado4.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado4.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/teclado5.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado5.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/teclado6.jpg" alt=" Teclado Mecánico">
+            <img src="./img/teclado6.jpg" alt=" Teclado Mecánico">
             <h3>Teclado Mecánico</h3>
             <p>$50 USD</p>
         </div>
