--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>Kratos Pc</h1>
         <nav class="nav">
             <a href="index.html">Inicio</a>
-            <a href="auriculars.html">Auriculares</a>
-            <a href="mouse.html">Mouse</a>
-            <a href="teclados.html">teclados</a>
-            <a href="monitores.html">monitores</a>
-            <a href="contacto.html">Contacto</a>
+            <a href="./pages/auriculares.html">Auriculares</a>
+            <a href="./pages/mouse.html">Mouse</a>
+            <a href="./pages/teclados.html">teclados</a>
+            <a href="./pages/monitores.html">monitores</a>
+            <a href="./pages/contacto.html">Contacto</a>
 
         </nav>
     </header>
