--- a/pages/auriculares.html
+++ b/pages/auriculares.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos - Tienda PC</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../styles/estilos.css" />
 </head>
 
 <body>
     <header class="header">
         <h1>Kratos Pc</h1>
         <nav class="nav">
-            <a href="index.html">Inicio</a>
-            <a href="auriculars.html">Auriculares</a>
+            <a href="../index.html">Inicio</a>
+            <a href="auriculares.html">Auriculares</a>
             <a href="mouse.html">Mouse</a>
             <a href="teclados.html">teclados</a>
             <a href="monitores.html">monitores</a>
@@ -23,33 +23,33 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="./img/auris1.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris1.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 1</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/auris2.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris2.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 2</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="img/auris3.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris3.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 3</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/auris4.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris4.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 4</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/auris5.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris5.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 5</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/auris6.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/auris6.jpg" alt=" Teclado Mecánico">
+            <h3>Auriculares Gamer 6</h3>
             <p>$50 USD</p>
         </div>
     </main>
