--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../styles/estilos.css" />
 </head>
 
 <body>
     <header class="header">
         <h1>Kratos Pc</h1>
         <nav class="nav">
-            <a href="index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="auriculars.html">Auriculares</a>
             <a href="mouse.html">Mouse</a>
             <a href="teclados.html">teclados</a>
