--- a/pages/mouse.html
+++ b/pages/mouse.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos - Tienda PC</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../styles/estilos.css" />
 </head>
 
 <body>
     <header class="header">
         <h1>Kratos Pc</h1>
         <nav class="nav">
-            <a href="index.html">Inicio</a>
-            <a href="auriculars.html">Auriculares</a>
+            <a href="../index.html">Inicio</a>
+            <a href="auriculares.html">Auriculares</a>
             <a href="mouse.html">Mouse</a>
             <a href="teclados.html">teclados</a>
             <a href="monitores.html">monitores</a>
@@ -23,33 +23,33 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="./img/mouse1.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/mouse1.jpg" alt=" Teclado Mecánico">
+            <h3>mause gamer 1</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/mouse2.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/mouse2.jpg" alt=" Teclado Mecánico">
+            <h3>mause gamer 2 </h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/mouse3.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/mouse3.jpg" alt=" Teclado Mecánico">
+            <h3>mause gamer 3</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/mouse4.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/mouse4.jpg" alt=" Teclado Mecánico">
+            <h3>Tmause gamer 4</h3>
+
+        </div>
+        <div class="producto">
+            <img src="../img/mouse5.jpg" alt=" Teclado Mecánico">
+            <h3>mause gamer 5</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/mouse5.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="./img/mouse6.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/mouse6.jpg" alt=" Teclado Mecánico">
+            <h3>mause gamer 6 </h3>
             <p>$50 USD</p>
         </div>
     </main>
