--- a/pages/teclados.html
+++ b/pages/teclados.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos - Tienda PC</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../styles/estilos.css" />
 </head>
 
 <body>
     <header class="header">
         <h1>Kratos Pc</h1>
         <nav class="nav">
-            <a href="index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="auriculars.html">Auriculares</a>
             <a href="mouse.html">Mouse</a>
             <a href="teclados.html">teclados</a>
@@ -23,33 +23,33 @@
     </header>
     <main class="productos">
         <div class="producto">
-            <img src="./img/teclado1.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado1.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 1</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/teclado2.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado2.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 2</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/teclado3.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado3.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 3</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/teclado4.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado4.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 4 </h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/teclado5.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado5.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 5</h3>
             <p>$50 USD</p>
         </div>
         <div class="producto">
-            <img src="./img/teclado6.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico</h3>
+            <img src="../img/teclado6.jpg" alt=" Teclado Mecánico">
+            <h3>Teclado Mecánico 6</h3>
             <p>$50 USD</p>
         </div>
     </main>
