--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda PC Accesorios</title>
-    <link rel="stylesheet" href="./styles/estilos.css" />
+    <link rel="stylesheet" href="./estilos.css" />
 </head>
 
 <body>
