--- a/pages/auriculares.html
+++ b/pages/auriculares.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos - Tienda PC</title>
-    <link rel="stylesheet" href="../estilos.css" />
+    <title>Auriculares - Tienda PC</title>
+    <link rel="stylesheet" href="../styles/stilos.css" />
 </head>
+
+
 
 <body>
     <header class="header">
@@ -18,41 +20,106 @@
             <a href="teclados.html">teclados</a>
             <a href="monitores.html">monitores</a>
             <a href="contacto.html">Contacto</a>
-
         </nav>
     </header>
-    <main class="productos">
-        <div class="producto">
-            <img src="../img/auris1.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 1</h3>
-            <p>$50 USD</p>
+
+    <div class="container">
+        <!-- Sidebar de Promociones (solo visible en desktop) -->
+        <aside class="sidebar">
+            <div class="promociones-title">
+                🔥 Promociones Especiales
+            </div>
+
+            <div class="promo-efectivo">
+                <h3>💰 Pago en Efectivo</h3>
+                <div class="descuento">15% OFF</div>
+                <p>¡Aprovecha el mejor precio!</p>
+            </div>
+
+            <div class="cuotas-section">
+                <h4 class="cuotas-title">📊 Financiación en Cuotas</h4>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">3 cuotas</span>
+                    <span class="interes">18% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">6 cuotas</span>
+                    <span class="interes">45% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">9 cuotas</span>
+                    <span class="interes">78% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">12 cuotas</span>
+                    <span class="interes">120% TEA</span>
+                </div>
+
+                <div
+                    style="margin-top: 1rem; padding: 1rem; background: #fff3cd; border-radius: 8px; font-size: 0.85rem; color: #856404;">
+                    <strong>💡 Tip:</strong> El pago en efectivo siempre es la mejor opción. Las tasas reflejan la
+                    inflación argentina actual.
+                </div>
+            </div>
+        </aside>
+
+        <!-- Contenido Principal -->
+        <div class="main-content">
+            <section class="mensaje-bienvenida">
+                <h2>🎧 Auriculares Gamers</h2>
+                <p>Audio inmersivo para la mejor experiencia de juego</p>
+            </section>
+
+            <main class="productos">
+                <div class="producto">
+                    <img src="../img/auris1.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Pro <span class="wireless-badge">WIRELESS</span></h3>
+                    <div class="audio-specs">7.1 Surround • 50mm Drivers • RGB</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$85 USD <span class="precio-efectivo">$72.25 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/auris2.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Studio</h3>
+                    <div class="audio-specs">Hi-Res Audio • 40mm Drivers • Noise Cancel</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$65 USD <span class="precio-efectivo">$55.25 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/auris3.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Elite <span class="wireless-badge">WIRELESS</span></h3>
+                    <div class="audio-specs">THX Spatial • 53mm Drivers • RGB Chroma</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$120 USD <span class="precio-efectivo">$102.00 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/auris4.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Sport</h3>
+                    <div class="audio-specs">IPX4 • Bluetooth 5.0 • 20h Batería</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$45 USD <span class="precio-efectivo">$38.25 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/auris5.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Xtreme</h3>
+                    <div class="audio-specs">DTS:X • 50mm Titanium • Mic Detachable</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$95 USD <span class="precio-efectivo">$80.75 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/auris6.jpg" alt="Auriculares Gamer">
+                    <h3>Auriculares Gamer Ultimate <span class="wireless-badge">WIRELESS</span></h3>
+                    <div class="audio-specs">Planar Magnetic • ANC • 30h Batería</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$150 USD <span class="precio-efectivo">$127.50 efectivo</span></p>
+                </div>
+            </main>
         </div>
-        <div class="producto">
-            <img src="../img/auris2.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 2</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/auris3.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 3</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/auris4.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 4</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/auris5.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 5</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/auris6.jpg" alt=" Teclado Mecánico">
-            <h3>Auriculares Gamer 6</h3>
-            <p>$50 USD</p>
-        </div>
-    </main>
+    </div>
 
     <footer class="footer">
         <p>&copy; 2025 Tienda PC Accesorios</p>
