--- a/pages/teclados.html
+++ b/pages/teclados.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos - Tienda PC</title>
-    <link rel="stylesheet" href="../estilos.css" />
+    <title>Teclados - Tienda PC</title>
+    <link rel="stylesheet" href="../styles/stilos.css" />
 </head>
 
 <body>
@@ -13,46 +13,113 @@
         <h1>Kratos Pc</h1>
         <nav class="nav">
             <a href="../index.html">Inicio</a>
-            <a href="auriculars.html">Auriculares</a>
+            <a href="auriculares.html">Auriculares</a>
             <a href="mouse.html">Mouse</a>
             <a href="teclados.html">teclados</a>
             <a href="monitores.html">monitores</a>
             <a href="contacto.html">Contacto</a>
-
         </nav>
     </header>
-    <main class="productos">
-        <div class="producto">
-            <img src="../img/teclado1.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 1</h3>
-            <p>$50 USD</p>
+
+    <div class="container">
+        <!-- Sidebar de Promociones (solo visible en desktop) -->
+        <aside class="sidebar">
+            <div class="promociones-title">
+                🔥 Promociones Especiales
+            </div>
+
+            <div class="promo-efectivo">
+                <h3>💰 Pago en Efectivo</h3>
+                <div class="descuento">15% OFF</div>
+                <p>¡Aprovecha el mejor precio!</p>
+            </div>
+
+            <div class="cuotas-section">
+                <h4 class="cuotas-title">📊 Financiación en Cuotas</h4>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">3 cuotas</span>
+                    <span class="interes">18% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">6 cuotas</span>
+                    <span class="interes">45% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">9 cuotas</span>
+                    <span class="interes">78% TEA</span>
+                </div>
+
+                <div class="cuota-item">
+                    <span class="cuotas-num">12 cuotas</span>
+                    <span class="interes">120% TEA</span>
+                </div>
+
+                <div
+                    style="margin-top: 1rem; padding: 1rem; background: #fff3cd; border-radius: 8px; font-size: 0.85rem; color: #856404;">
+                    <strong>💡 Tip:</strong> El pago en efectivo siempre es la mejor opción. Las tasas reflejan la
+                    inflación argentina actual.
+                </div>
+            </div>
+        </aside>
+
+        <!-- Contenido Principal -->
+        <div class="main-content">
+            <section class="mensaje-bienvenida">
+                <h2>⌨️ Teclados Mecánicos</h2>
+                <p>Precisión y velocidad en cada tecla</p>
+            </section>
+
+            <main class="productos">
+                <div class="producto">
+                    <img src="../img/teclado1.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Pro <span class="rgb-badge">RGB</span></h3>
+                    <div class="keyboard-specs">Cherry MX Red • TKL • Anti-Ghost</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$75 USD <span class="precio-efectivo">$63.75 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/teclado2.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Gaming <span class="wireless-badge">WIRELESS</span></h3>
+                    <div class="keyboard-specs">Gateron Blue • 60% • Hot-Swap</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$95 USD <span class="precio-efectivo">$80.75 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/teclado3.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Elite <span class="rgb-badge">RGB</span> <span
+                            class="wireless-badge">WIRELESS</span></h3>
+                    <div class="keyboard-specs">Cherry MX Speed • Full Size • PBT Keycaps</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$135 USD <span class="precio-efectivo">$114.75 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/teclado4.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Compact</h3>
+                    <div class="keyboard-specs">Kailh Brown • 65% • Aluminio</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$55 USD <span class="precio-efectivo">$46.75 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/teclado5.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Custom <span class="rgb-badge">RGB</span></h3>
+                    <div class="keyboard-specs">Gateron Yellow • 75% • Gasket Mount</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$110 USD <span class="precio-efectivo">$93.50 efectivo</span></p>
+                </div>
+                <div class="producto">
+                    <img src="../img/teclado6.jpg" alt="Teclado Mecánico">
+                    <h3>Teclado Mecánico Ultimate <span class="rgb-badge">RGB</span> <span
+                            class="wireless-badge">WIRELESS</span></h3>
+                    <div class="keyboard-specs">Cherry MX Black • Full Size • 2.4GHz + BT</div>
+                    <button>AGREGAR AL CARRITO</button>
+                    <p>$165 USD <span class="precio-efectivo">$140.25 efectivo</span></p>
+                </div>
+            </main>
         </div>
-        <div class="producto">
-            <img src="../img/teclado2.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 2</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/teclado3.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 3</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/teclado4.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 4 </h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/teclado5.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 5</h3>
-            <p>$50 USD</p>
-        </div>
-        <div class="producto">
-            <img src="../img/teclado6.jpg" alt=" Teclado Mecánico">
-            <h3>Teclado Mecánico 6</h3>
-            <p>$50 USD</p>
-        </div>
-    </main>
+    </div>
 
     <footer class="footer">
         <p>&copy; 2025 Tienda PC Accesorios</p>
