--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" Tienda online de periféricos para PC: teclados mecánicos, ratones gaming,
+        auriculares, monitores y accesorios. Envío gratis, mejores precios y garantía oficial. ¡Potencia tu setup!"">
+    <meta name="keywords"
+        content="periféricos pc, teclados mecánicos, ratones gaming, auriculares gamer, monitores gaming, webcam, micrófonos, setup gamer, accesorios pc, hardware">
+    <meta name="language" content="Spanish">
     <title>Tienda PC Accesorios</title>
     <link rel="stylesheet" href="./styles/stilos.css" />
 
